# Immich-Album-Sync

./: .gitignore  Cargo.toml  Immich-Album-Sync.ps1  LICENSE  README.md  config.example.json  setup-schtask.ps1
src/: config.rs  main.rs
