[package]
name = "immich_album_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
directories = "5.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
